chore:add why we need a UUID

--- a/draft/今日笔记.md
+++ b/draft/今日笔记.md
@@ -376,3 +376,7 @@ Install Dnsmasq which is the lightweight DNS forwarder and DHCP Server Software.
 5. [DNSMASQ-source](http://www.thekelleys.org.uk/dnsmasq/docs/dnsmasq-man.html "DNSMASQ")
 6. [HowTodnsmasq]( https://wiki.debian.org/HowTo/dnsmasq "HowTodnsmasq")
 7. [resolv.conf](https://manpages.debian.org/stretch/manpages/resolv.conf.5.en.html "resolv.conf")
+
+
+# 20180410
+1.["Why we need a UUID?"](https://rclayton.silvrback.com/do-you-really-need-a-uuid-guid "why we need a UUID?")
