--- a/Programming language/C-Programming/basic/K&R-02.md
+++ b/Programming language/C-Programming/basic/K&R-02.md
@@ -1,1 +1,65 @@
 ## Types. Operators, and Expressions
+
++ 变量(Variables)和常量(Constants)是程序操作的基本对象。
++ 变量声明列表(Declarations list)列出了所有将被使用的变量，同时也表示他们的类型以及他们的初始值。
++ 操作符(Operator)指明将会对这些变量做的动作。
++ 表达式(Expressions)组合常量及变量产生新的值。
++ 操作对象的类型决定了这个对象可以赋什么值以及可以对它做什么操作。
+
++ ANSI 标准在基本数据类型和表达式上与之前不一样了。
+
+    + 所有整型目前都具备了signed与unsigned形式，无符号常量及十六进制字符常量
+    + 浮点型操作可以使用单精度，同时也支持长双精度。
+    + 字符串常量可能会在编译的时候进行了链接
+    + 枚举类型现在成为了语言的一部分
+    + 对象可以被声明为const,避免他们被改变
+    + 算数类型之间的强制转换规则可以支持更丰富的类型
+
+### 2.1 Variable Names
+
++ 变量以及符号常量存在一些命名限制
+    + 变量名以及常量名由字母和数字组成，必须以字母开头，有时候为了便于阅读，加入下划线到变量名中。
+    + 变量名不能以下划线开头，因为一些库函数中会以下划线开头
+    + 变量名大小写敏感，x与X是两个不同的名字
+    + 传统的C实例中使用小写字母表示变量名，大写字母表示符号常量
+
+    + 内部变量名前31个字符有效
+    + 对于函数名和外部变量名，长度可能小于31,因为外部变量名可能用于汇编器或者装入器，而不受控制。
+    +[ ] 对于外部变量名，标准保证6个字符以及一个大小写的唯性？（怎么理解）
+    + c语言中诸如 if,else,int,float这种关键词不能用于变量名，而且这些关键词必须小写。
+    + 将命名与变量的表示的目标联系起来是明智的。
+    + 短变量名字用户本地变量，比如循环索引，长变量名用于外部变量
+
+### 2.2 Data Types and Sizes
+
++ char 一个单字节，能够在本地字符集中存储一个字符
++ int 一个整型，通常反映了机器上整数自然大小
++ float 单精度浮点类型
++ double 双精度浮点类型
++ 此外，还有很多可以用于这些基本类型的限定词，比如，short和long用户修饰intger
+
+    short int sh;
+    long int counter;
+通常在此类声明中可以省略int。
+
++ 修饰词short与long的作用是在可行的情况下，可以给整数存储提供的不同长度。
++ int类型是机器正常的大小
++ short是16bits,long是32位，int可能是16或者32位，编译器可以自由根据硬件情况选择大小，但是需要保证的是，short和int至少16位，long类型至少32位，并且short不能长于int,int不能长于long
++ signed 和unsiged可以用来修饰char和任何整型数据。
++ 无符号数字通常表示正整数和0,并且遵循公式2n,n表示类型存储的bit,比如，char类型存储8位，那么unsigned char可以表示0-255之间的数字,然而singed char表示-128-127(二进制补码)
++ 普通字符是有符号还是无符号取决于机器，但是能打印的字符通常是正整数。
++ long double 指定了拓展精度，与int类型一样，浮点类型对象的大小由实现决定，也就是说，float, double, long double可以便是一个，两个，三个不同的值。
++ 标准头文件<limits.h> 和<float.h>包含了所有这些大小，以及机器和编译器的其他属性
+
+
+### Constants
++ 整型常量 1236
++ long整型常量是以l(L)结尾,比如123456789L
++ 如果一个整数太大，那么他会被转成long
++ 无符号整型常量会以u(U)结尾
++ ul(UL)表示无符号长整型
++ 浮点数常量包含小数部分，123.4或者指数或者两者都有，这个例子的常量类型是double
++ 普通浮点数常量以结尾f(F)表示double常量
++ 普通浮点数常量以l(L)结尾表示长浮点数类型
++ 前导0，表示八进制，0x或者0X表示16进制」
++ 字符常量是整型
