--- a/Programming language/C-Programming/basic/K&R-02.md
+++ b/Programming language/C-Programming/basic/K&R-02.md
@@ -25,7 +25,7 @@
 
     + 内部变量名前31个字符有效
     + 对于函数名和外部变量名，长度可能小于31,因为外部变量名可能用于汇编器或者装入器，而不受控制。
-    +[ ] 对于外部变量名，标准保证6个字符以及一个大小写的唯性？（怎么理解）
+    + [ ] 对于外部变量名，标准保证6个字符以及一个大小写的唯性？（怎么理解）
     + c语言中诸如 if,else,int,float这种关键词不能用于变量名，而且这些关键词必须小写。
     + 将命名与变量的表示的目标联系起来是明智的。
     + 短变量名字用户本地变量，比如循环索引，长变量名用于外部变量
@@ -61,5 +61,17 @@
 + 浮点数常量包含小数部分，123.4或者指数或者两者都有，这个例子的常量类型是double
 + 普通浮点数常量以结尾f(F)表示double常量
 + 普通浮点数常量以l(L)结尾表示长浮点数类型
-+ 前导0，表示八进制，0x或者0X表示16进制」
++ 前导0，表示八进制，0x或者0X表示16进制,八进制与十六进制也可以带上上面那些后缀
 + 字符常量是整型
++ '\0'表示0，只是为了强调某些字符特性的时候才使用
++ 常量表达式只涉及常量
++ 常量表达式子会在编译阶段而不是运行时计算，所以常量能够在所以地方使用。
++ 字符串常量通常是由双引号括起来的零个或者多个字符的序列，例如```I am a string```, ```"" /* the empty string */```
++ 字符串常量通常以数组的格式存储，以'\0'字符常量结尾，字符串长度计算(strlen)不包括尾部的'\0'字符
++ 枚举类型常量，枚举类型第一个值是0,下一个是1，除非特别指定了值。如果所有的枚举项都没有被指定，没有被指定的项目值跟前面处理一样
++ 枚举类型常量中的项目名必须不同，同一个枚举的值可以一样
+
+### Declarations
+
++ 所有变量都必须在使用之前声明，有些声明可以通过上下文隐式声明
++ 声明包含变量类型，以及包含一系列符合该类型的变量名
