--- a/Programming language/C-Programming/basic/K&R-02.md
+++ b/Programming language/C-Programming/basic/K&R-02.md
@@ -75,3 +75,14 @@
 
 + 所有变量都必须在使用之前声明，有些声明可以通过上下文隐式声明
 + 声明包含变量类型，以及包含一系列符合该类型的变量名
++ 变量初始化可以在声明的时候做
++ 如果变量声明不是自动的，那么概念上来说，初始化会在程序执行前执行一次，并且初始化只能是一个一个常量表达式
++ 没有显示的初始化的变量值为undefined,垃圾值
++ 修饰符const可以用来修饰声明那些不会改变值的变量上，常量？
++ const修饰符同样可以用来修饰数组参数上，表明该方法将不会改变传入数组，const, int strlen(const char[]);
++ 当尝试修改const的值时，结果是实现定义的(编译器级别的？)
+
+### Arithmetic Operators
+
++ 二进制算数运算符，+，-，*,/ 和取模运算%
++ %不能用于浮点类型
